--- a/src/style.css
+++ b/src/style.css
@@ -2,13 +2,13 @@
 
 @font-face {
     font-family: 'Ubuntu Regular';
-    src: url('/fonts/Ubuntu-Regular.eot');
+    src: url('Ubuntu-Regular.eot');
     src: local('Ubuntu Regular'), local('Ubuntu-Regular'),
-        url('/fonts/Ubuntu-Regular.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/Ubuntu-Regular.woff2') format('woff2'),
-        url('/fonts/Ubuntu-Regular.woff') format('woff'),
-        url('/fonts/Ubuntu-Regular.ttf') format('truetype'),
-        url('/fonts/Ubuntu-Regular.svg#Ubuntu-Regular') format('svg');
+        url('/src/fonts/Ubuntu-Regular.eot?#iefix') format('embedded-opentype'),
+        url('/src/fonts/Ubuntu-Regular.woff2') format('woff2'),
+        url('/src/fonts/Ubuntu-Regular.woff') format('woff'),
+        url('/src/fonts/Ubuntu-Regular.ttf') format('truetype'),
+        url('/src/fonts/Ubuntu-Regular.svg#Ubuntu-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -16,27 +16,27 @@
 
 @font-face {
     font-family: 'Ubuntu Light';
-    src: url('/fonts/Ubuntu-Light.eot');
+    src: url('Ubuntu-Light.eot');
     src: local('Ubuntu Light'), local('Ubuntu-Light'),
-        url('/fonts/Ubuntu-Light.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/Ubuntu-Light.woff2') format('woff2'),
-        url('/fonts/Ubuntu-Light.woff') format('woff'),
-        url('/fonts/Ubuntu-Light.ttf') format('truetype'),
-        url('/fonts/Ubuntu-Light.svg#Ubuntu-Light') format('svg');
+        url('/src/fonts/Ubuntu-Light.eot?#iefix') format('embedded-opentype'),
+        url('/src/fonts/Ubuntu-Light.woff2') format('woff2'),
+        url('/src/fonts/Ubuntu-Light.woff') format('woff'),
+        url('/src/fonts/Ubuntu-Light.ttf') format('truetype'),
+        url('/src/fonts/Ubuntu-Light.svg#Ubuntu-Light') format('svg');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Ubuntu MedItalic';
-    src: url('/src/fonts/Ubuntu-MediumItalic.eot');
+    font-family: 'Ubuntu Medium Italic';
+    src: url('Ubuntu-MediumItalic.eot');
     src: local('Ubuntu Medium Italic'), local('Ubuntu-MediumItalic'),
-        url('/fonts/Ubuntu-MediumItalic.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/Ubuntu-MediumItalic.woff2') format('woff2'),
-        url('/fonts/Ubuntu-MediumItalic.woff') format('woff'),
-        url('/fonts/Ubuntu-MediumItalic.ttf') format('truetype'),
-        url('/fonts/Ubuntu-MediumItalic.svg#Ubuntu-MediumItalic') format('svg');
+        url('/src/fonts/Ubuntu-MediumItalic.eot?#iefix') format('embedded-opentype'),
+        url('/src/fonts/Ubuntu-MediumItalic.woff2') format('woff2'),
+        url('/src/fonts/Ubuntu-MediumItalic.woff') format('woff'),
+        url('/src/fonts/Ubuntu-MediumItalic.ttf') format('truetype'),
+        url('/src/fonts/Ubuntu-MediumItalic.svg#Ubuntu-MediumItalic') format('svg');
     font-weight: 500;
     font-style: italic;
     font-display: swap;
@@ -44,13 +44,13 @@
 
 @font-face {
     font-family: 'Lemonada';
-    src: url('/fonts/Lemonada-Regular.eot');
+    src: url('Lemonada-Regular.eot');
     src: local('Lemonada Regular'), local('Lemonada-Regular'),
-        url('/fonts/Lemonada-Regular.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/Lemonada-Regular.woff2') format('woff2'),
-        url('/fonts/Lemonada-Regular.woff') format('woff'),
-        url('/fonts/Lemonada-Regular.ttf') format('truetype'),
-        url('/fonts/Lemonada-Regular.svg#Lemonada-Regular') format('svg');
+        url('/src/fonts/Lemonada-Regular.eot?#iefix') format('embedded-opentype'),
+        url('/src/fonts/Lemonada-Regular.woff2') format('woff2'),
+        url('/src/fonts/Lemonada-Regular.woff') format('woff'),
+        url('/src/fonts/Lemonada-Regular.ttf') format('truetype'),
+        url('/src/fonts/Lemonada-Regular.svg#Lemonada-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -60,9 +60,9 @@
 
 :root {
 
-    --ff-primary-regular: "Ubuntu Regular", "sans serif";
+    --ff-primary: "Ubuntu Regular", "sans serif";
     --ff-primary-light: "Ubuntu Light", "sans serif";
-    --ff-primary-meditalic: "Ubuntu MedItalic", "sans serif";
+    --ff-primary-meditalic: "Ubuntu Medium Italic", "sans serif";
     --ff-deco: "Lemonada", "sans serif";
 
 /** Main Color: Blue **/
@@ -92,6 +92,7 @@
     --clr-grey-7: hsl(211,27%,70%);
     --clr-grey-8: hsl(210,31%,80%);
     --clr-grey-9: hsl(212,33%,89%);
+    --clr-grey-10: hsl(212,32%,96%);
     
 /** Utility **/
     --clr-white: #fff;
@@ -108,9 +109,8 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 body {
-    font-family: var(--ff-primary);
+    font-family: var(--ff-primary-light);
     background: var(--clr-white);
     color: var(--clr-grey-1);
     line-height: 1.5;
@@ -128,6 +128,7 @@ ul {
 }
 p {
     margin-bottom: 1.25rem;
+    color: var(--clr-grey-5);
 }
 h1, h1, h3, h4 {
     letter-spacing: var(--spacing);
@@ -144,13 +145,15 @@ h4 {font-size: 0.875rem;}
     h1, h1, h3, h4 {
         line-height: 1;
     }
-    h1 {font-size: 3rem;}
-    h2 {font-size: 2rem;}
-    h3 {font-size: 1.25rem;}
-    h4 {font-size: 0.875rem;)
+    h1 {font-size: 4rem;}
+    h2 {font-size: 2.5rem;}
+    h3 {font-size: 1.75rem;}
+    h4 {font-size: 1rem;}
+    body {font-size: 1rem;}
+    h1,h2,h3,h4 {line-height: 1;}
 }
 .btn{
-    texttransform: uppercase;
+    text-transform: uppercase;
     background: var(--clr-primary);
     color: var(--clr-white);
     padding: 0.375rem 0.75rem;
@@ -183,3 +186,160 @@ h4 {font-size: 0.875rem;}
     justify-content: center;
     align-items: center;
 }
+.hero a {
+    padding: 0.9rem 1.6rem;
+    font-size: 1.25rem;
+    background: var(--clr-white);
+    color: var(--clr-secondary-5);
+}
+.hero a:hover {
+    background: transparent;
+    color: var(--clr-white);
+    border-color: var(--clr-white);
+}
+.hero-banner {
+    text-align: center;
+    color: var(--clr-white);
+    padding: 0 3rem;
+}
+.hero-banner h1 {
+    text-transform: uppercase;
+}
+.hero-banner span {
+    font-family: var(--ff-deco);
+}
+.hero-banner p {
+    max-width: 35rem;
+    margin: 0 auto 2rem auto;
+    color: var(--clr-white);
+    letter-spacing: var(--spacing);
+}
+@media screen and (min-width: 576px) {
+    .hero {
+        background:
+        linear-gradient(rgb(44,174,186,0.7), rgba(0,0,0,0.7)),
+        url("/src/images/zanzibar-beach-tunisia.jpg") 
+        center/cover no-repeat;
+    }
+    .hero-banner {
+        padding: 0; 
+    }
+    .hero-banner p {
+        max-width: 45rem;
+    }
+}
+
+/** LAYOUT **/
+.layout-centered {
+    width: 90vw;
+    margin: 0 auto;
+    max-width: 1170px;
+}
+.layout-flex-columns {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+/** ABOUT SECTION **/
+.about {
+    padding: 5rem 0;
+}
+.about h2 {
+    text-align: center;
+    margin-bottom: 4rem;
+    text-transform: uppercase;
+}
+.about-img-deco,
+.about article {
+    margin-bottom: 2rem;
+}
+@media screen and (min-width: 576px) {
+    .layout-centered {
+        width: 85vw;
+    }
+}
+@media screen and (min-width: 992px) {
+    .layout-centered {
+        width: 95vw;
+    }
+    .about-img-deco,
+    .about article {
+        flex: 0 0 calc(50% - 2rem);
+        margin-bottom: 0;
+        align-self: center;
+    }
+    .about-img-deco {
+        display: block;
+        border: 0.5rem solid var(--clr-primary);
+    }
+    .about-img-deco::before { 
+        content: "";
+        position: absolute;
+        box-sizing: border-box;
+    }
+    .about-img-deco img {
+        position: relative;
+        top: 1.5rem;
+        left: 1.5rem;
+    }
+}
+/** SERVICES SECTION **/
+.services {
+    background: var(--clr-grey-10);
+    padding: 2rem 0;
+    text-align: center;
+}
+.services article {
+    margin-bottom: 1rem;
+}
+.services h2 {
+    margin-bottom: 4rem;
+    text-transform: uppercase;
+}
+.services span {
+    background: var(--clr-secondary-5);
+    color: var(--clr-secondary-1);
+    font-size: 1.25rem;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+}
+.services p {
+    max-width: 20rem;
+    margin: 0.75rem auto;
+}
+
+@media screen and (min-width: 576px) {
+    .services article {
+        flex: 0 0 calc(50% - 1rem);
+    }
+}
+@media screen and (min-width: 992px) {
+    .services article {
+        flex: 0 0 calc(33.333% - 1rem);
+    }
+}
+@media screen and (min-width: 992px) {
+    .services article {
+        display: flex;
+        text-align: left;
+    }
+    .services span {
+        align-self: start;
+    }
+    .services-info {
+        padding-left: 1rem;
+    }
+    .services p {
+        margin-top: 0.25rem;
+    }
+}
+
+
+/** FEATURED TOURS SECTION **/
+
+/** CONTACT SECTION **/
+.contact {
+    background: var(--clr-primary);
+}
+
