--- a/src/style.css
+++ b/src/style.css
@@ -395,7 +395,7 @@ h4 {font-size: 0.875rem;}
 .card-footer span {
     padding-right: 0.5rem;
 }
-.featured a {
+.featured .btn {
     text-align: center;
     margin: 1.5rem auto;
 }
@@ -414,11 +414,58 @@ h4 {font-size: 0.875rem;}
 
 
 /** CONTACT SECTION **/
-.contact {
+.newsletter {
     background: var(--clr-primary);
     padding: 2rem 1rem;
 }
+.newslettter h3 {
+    color: var(--clr-white);
+}
+.newsletter p {
+    color: var(--clr-secondary-9);
+}
+.newsletter-form {
+    max-width: 30rem;
+    display: flex;
+}
+.newsletter-input {
+    flex: 1 1 auto;
+    color: var(--clr-grey-5);
+}
+.newsletter-input,
+.newsletter-submit {
+    background: var(--clr-white);
+    font-size: 1rem;
+    font-weight: 300;
+    text-transform: capitalize;
+    letter-spacing: var(--spacing);
+    padding: 0.375rem 0.75rem;
+    line-height: 1.5rem;
+    border: transparent;      
+}
+.newsletter-form:placeholder {
+    color: inherit;
+}
+.newsletter-submit {
+    font-family: (--ff-primary);
+    margin-left: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    background: var(--clr-secondary-8);
+    color: var(--clr-secondary-1);
+    cursor: pointer;
+    transition: var(--transition);
+}
 
+.newsletter-submit:hover {
+    background: var(--clr-secondary-1);
+    color: var(--clr-secondary-5);
+}
+@media screen and (min-width: 576px) {
+    .newsletter {
+        flex: 0 0 calc(50% - 1rem);
+    }
+}
 
 /** GALLERY SECTION **/
 .gallery article {
@@ -461,6 +508,32 @@ h4 {font-size: 0.875rem;}
     }
 }
 .footer {
-    background: var(--clr-secondary-1);
+    background: var(--clr-grey-1);
+    text-align: center;
     margin-bottom: 0;
+    padding: 1.5rem 0;
+}
+.footer .links,
+.footer .socials {
+    display: flex;
+    flex: wrap;
+    justify-content: center;
+    margin-bottom: 1.5rem;
+}
+.footer .links a {
+    color: var(--clr-white);
+}
+.footer .links a {
+    color: var(--clr-white);
+    text-transform: capitalize;
+    font-size: 1rem;
+    letter-spacing: var(--spacing);
+    transition: var(--transition);
+    margin-right: 1rem;
+}
+.footer .socials span {
+    font-size: 2rem;
+    transition: var(--transition);
+    margin-right: 2.5rem;
+    color: var(--clr-secondary-7);
 }
