--- a/src/style.css
+++ b/src/style.css
@@ -425,7 +425,7 @@ h4 {font-size: 0.875rem;}
     color: var(--clr-secondary-9);
 }
 .newsletter-form {
-    max-width: 30rem;
+    max-width: 28rem;
     display: flex;
 }
 .newsletter-input {
@@ -435,12 +435,12 @@ h4 {font-size: 0.875rem;}
 .newsletter-input,
 .newsletter-submit {
     background: var(--clr-white);
-    font-size: 1rem;
+    font-size: 0.75rem;
     font-weight: 300;
     text-transform: capitalize;
     letter-spacing: var(--spacing);
     padding: 0.375rem 0.75rem;
-    line-height: 1.5rem;
+    line-height: 1rem;
     border: transparent;      
 }
 .newsletter-form:placeholder {
@@ -462,8 +462,9 @@ h4 {font-size: 0.875rem;}
     color: var(--clr-secondary-5);
 }
 @media screen and (min-width: 576px) {
-    .newsletter {
-        flex: 0 0 calc(50% - 1rem);
+    .newsletter-form {
+        align-self: flex-start;
+        flex: 1 1 auto;
     }
 }
 
