--- a/src/style.css
+++ b/src/style.css
@@ -107,7 +107,8 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 body {
     font-family: var(--ff-primary-light);
@@ -163,7 +164,10 @@ h4 {font-size: 0.875rem;}
     font-size: 0.875rem;
     border: 2px solid transparent;
     cursor: pointer; 
-    box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.2); 
+            box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+    -webkit-transition: var(--transition);
+    -o-transition: var(--transition);
     transition: var(--transition); 
 }
 .btn:hover {
@@ -185,33 +189,46 @@ h4 {font-size: 0.875rem;}
     left: 0;
     width: 100%;
     background: var(--clr-white);
-    box-shadow: var(--dark-shadow);
+    -webkit-box-shadow: var(--dark-shadow);
+            box-shadow: var(--dark-shadow);
     z-index: 2;
 }
-.navigation .layout-centered {
+.navigation .navigation-large {
+    width: 95vw;
     max-width: 1170px;
     margin: 0 auto;
 }
 .navigation .logo {
     color: var(--clr-primary);
+    font-size: 1rem;
 }
-.navigation-mobile {
+.navigation-small {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 1rem 0;
 }
-.navigation-mobile button {
+.navigation-small button {
     background: transparent;
     color: var(--clr-primary);
     padding: 0;
     margin: 0;
     font-size: 1rem;
     cursor: pointer;
+    -webkit-transition: var(--transition);
+    -o-transition: var(--transition);
     transition: var(--transition);
 }
-.navigation-mobile button:hover {
-    transform: scale(1.3);
+.navigation-small button:hover {
+    -webkit-transform: scale(1.3);
+        -ms-transform: scale(1.3);
+            transform: scale(1.3);
 }
 .navigation-links a {
     display: block;
@@ -220,6 +237,8 @@ h4 {font-size: 0.875rem;}
     letter-spacing: var(--spacing);
     font-size: 1rem;
     cursor: pointer;
+    -webkit-transition: var(--transition);
+    -o-transition: var(--transition);
     transition: var(--transition);
     color: var(--clr-grey-1);
 }
@@ -240,13 +259,76 @@ h4 {font-size: 0.875rem;}
     display: none;
 }
 
+@media screen and (min-width: 992px) {
+    .navigation {
+        padding: 1rem 2rem;
+    }
+    .navigation h3 {
+        padding: 0 0;
+        margin: 0;
+    }
+    .navigation-small button {
+        display: none;
+    }
+    .navigation-large {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    }
+    .navigation-links {
+        height: auto;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+    } 
+    .navigation-links a {
+        padding: 0 0;
+        margin-right: 0.7rem;
+    }
+    .navigation-links a:hover {
+        padding: 0;
+        color: var(--clr-secondary-5);
+        background: transparent;
+    }
+    .navigation .socials {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+    }
+    .navigation .socials a {
+        margin-right: 0.7rem;
+        color: var(--clr-primary-5);
+        font-size: 1.2rem;
+        -webkit-transition: var(--transition);
+        -o-transition: var(--transition);
+        transition: var(--transition);
+    }
+    .navigation .socials a:hover {
+        color: var(--clr-secondary-5);
+    }
+}
+
 /** HERO SECTION **/
 .hero {
     min-height: 100vh;
     background: var(--clr-primary);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .hero a {
     padding: 0.9rem 1.6rem;
@@ -279,6 +361,14 @@ h4 {font-size: 0.875rem;}
 @media screen and (min-width: 576px) {
     .hero {
         background:
+        -webkit-gradient(linear, left top, left bottom, from(rgb(44,174,186,0.7)), to(rgba(0,0,0,0.7))),
+        url("/src/images/zanzibar-beach-tunisia.jpg") 
+        center/cover no-repeat;
+        background:
+        -o-linear-gradient(rgb(44,174,186,0.7), rgba(0,0,0,0.7)),
+        url("/src/images/zanzibar-beach-tunisia.jpg") 
+        center/cover no-repeat;
+        background:
         linear-gradient(rgb(44,174,186,0.7), rgba(0,0,0,0.7)),
         url("/src/images/zanzibar-beach-tunisia.jpg") 
         center/cover no-repeat;
@@ -299,9 +389,14 @@ h4 {font-size: 0.875rem;}
     max-width: 1170px;
 }
 .layout-flex-columns {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 
 
@@ -329,9 +424,13 @@ h4 {font-size: 0.875rem;}
     }
     .about-img-deco,
     .about article {
-        flex: 0 0 calc(50% - 2rem);
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 calc(50% - 2rem);
+                flex: 0 0 calc(50% - 2rem);
         margin-bottom: 0;
-        align-self: center;
+        -ms-flex-item-align: center;
+            -ms-grid-row-align: center;
+            align-self: center;
     }
     .about-img-deco {
         display: block;
@@ -340,7 +439,8 @@ h4 {font-size: 0.875rem;}
     .about-img-deco::before { 
         content: "";
         position: absolute;
-        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box;
     }
     .about-img-deco img {
         position: relative;
@@ -353,7 +453,7 @@ h4 {font-size: 0.875rem;}
 /** SERVICES SECTION **/
 .services {
     background: var(--clr-grey-10);
-    padding: 2rem 0;
+    padding: 5rem 0;
     text-align: center; 
 }
 .services article {
@@ -376,17 +476,25 @@ h4 {font-size: 0.875rem;}
 }
 @media screen and (min-width: 760px) {
     .services article {
-        flex: 0 0 calc(50% - 1rem);
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 calc(50% - 1rem);
+                flex: 0 0 calc(50% - 1rem);
     }
 }
 @media screen and (min-width: 992px) {
     .services article {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex: 0 0 calc(33.333% - 1rem);
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 calc(33.333% - 1rem);
+                flex: 0 0 calc(33.333% - 1rem);
         text-align: left;
     }
     .services span {
-        align-self: start;
+        -ms-flex-item-align: start;
+            -ms-grid-row-align: start;
+            align-self: start;
     }
     .services-info {
         padding-left: 1rem;
@@ -397,7 +505,7 @@ h4 {font-size: 0.875rem;}
 
 /** FEATURED TOURS SECTION **/
 .featured {
-    padding: 1.5rem 0;
+    padding: 3rem 0;
 }
 .featured h2 {
     margin: 2.5rem auto;
@@ -405,22 +513,29 @@ h4 {font-size: 0.875rem;}
     text-transform: uppercase;
 }
 .featured article {
+    -webkit-transition: var(--transition);
+    -o-transition: var(--transition);
     transition: var(--transition);
     background: var(--clr-grey-10);
-    box-shadow: var(--light-shadow);
+    -webkit-box-shadow: var(--light-shadow);
+            box-shadow: var(--light-shadow);
     margin-bottom: 2rem;
     position: relative;
 }
 .featured article:hover {
-    box-shadow: var(--dark-shadow);
-    transform: scale(1.02);
+    -webkit-box-shadow: var(--dark-shadow);
+            box-shadow: var(--dark-shadow);
+    -webkit-transform: scale(1.02);
+        -ms-transform: scale(1.02);
+            transform: scale(1.02);
 }
 .card-upper {
     position: relative;
 }
 .card-upper img {
     height: 15rem;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 .card-upper span {
     position: absolute;
@@ -444,7 +559,9 @@ h4 {font-size: 0.875rem;}
     height: 3.5rem;
 }
 .card-footer .layout-flex-columns {
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .card-footer p {
     line-height: 0;
@@ -463,13 +580,17 @@ h4 {font-size: 0.875rem;}
 
 @media screen and (min-width: 760px) {
     .featured article {
-        flex: 0 0 calc(50% - 1rem);
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 calc(50% - 1rem);
+                flex: 0 0 calc(50% - 1rem);
     }
 }
 @media screen and (min-width: 1170px) {
 
     .featured article {
-        flex: 0 0 calc(33.333% - 1rem);
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 calc(33.333% - 1rem);
+                flex: 0 0 calc(33.333% - 1rem);
     }
 }
 
@@ -487,10 +608,14 @@ h4 {font-size: 0.875rem;}
 }
 .newsletter-form {
     max-width: 28rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 .newsletter-input {
-    flex: 1 1 auto;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
     color: var(--clr-grey-5);
 }
 .newsletter-input,
@@ -515,6 +640,8 @@ h4 {font-size: 0.875rem;}
     background: var(--clr-secondary-8);
     color: var(--clr-secondary-1);
     cursor: pointer;
+    -webkit-transition: var(--transition);
+    -o-transition: var(--transition);
     transition: var(--transition);
 }
 
@@ -524,8 +651,11 @@ h4 {font-size: 0.875rem;}
 }
 @media screen and (min-width: 576px) {
     .newsletter-form {
-        align-self: flex-start;
-        flex: 1 1 auto;
+        -ms-flex-item-align: start;
+            align-self: flex-start;
+        -webkit-box-flex: 1;
+            -ms-flex: 1 1 auto;
+                flex: 1 1 auto;
     }
 }
 
@@ -539,15 +669,22 @@ h4 {font-size: 0.875rem;}
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     color: var(--clr-white);
     opacity: 0;
     cursor: pointer;
+    -webkit-transition: var(--transition);
+    -o-transition: var(--transition);
     transition: var(--transition);
 }
 .gallery img {
+    -webkit-transition: var(--transition);
+    -o-transition: var(--transition);
     transition: var(--transition);
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 .gallery article:hover img {
     opacity: 0.3;
@@ -557,16 +694,24 @@ h4 {font-size: 0.875rem;}
 }
 @media screen and (min-width: 576px) {
     .gallery .layout-flex-columns {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex: wrap;
+        -webkit-box-flex: wrap;
+            -ms-flex: wrap;
+                flex: wrap;
     }
     .gallery article {
-        flex: 0 0 50%;
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 50%;
+                flex: 0 0 50%;
     }
 }
 @media screen and (min-width: 992px) {
     .gallery article {
-        flex: 0 0 25%;
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 25%;
+                flex: 0 0 25%;
     }
 }
 .footer {
@@ -577,9 +722,15 @@ h4 {font-size: 0.875rem;}
 }
 .footer .links,
 .footer .socials {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex: wrap;
-    justify-content: center;
+    -webkit-box-flex: wrap;
+        -ms-flex: wrap;
+            flex: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-bottom: 1.5rem;
 }
 .footer .links a {
@@ -590,11 +741,15 @@ h4 {font-size: 0.875rem;}
     text-transform: capitalize;
     font-size: 1rem;
     letter-spacing: var(--spacing);
+    -webkit-transition: var(--transition);
+    -o-transition: var(--transition);
     transition: var(--transition);
     margin-right: 1rem;
 }
 .footer .socials span {
     font-size: 2rem;
+    -webkit-transition: var(--transition);
+    -o-transition: var(--transition);
     transition: var(--transition);
     margin-right: 2.5rem;
     color: var(--clr-secondary-7);
