--- a/src/style.css
+++ b/src/style.css
@@ -733,6 +733,7 @@ h4 {font-size: 0.875rem;}
 }
 .footer .links a {
     color: var(--clr-white);
+    font-size: 1rem;
 }
 .footer .links a {
     color: var(--clr-white);
