--- a/src/style.css
+++ b/src/style.css
@@ -715,7 +715,7 @@ h4 {font-size: 0.875rem;}
 .footer {
     background: var(--clr-grey-1);
     text-align: center;
-    margin-bottom: 0;
+    margin: 0 auto;
     padding: 1.5rem 0;
 }
 .footer .links,
